--- a/WpfTutorial/MainWindow.xaml
+++ b/WpfTutorial/MainWindow.xaml
@@ -30,31 +30,31 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="textBox" Grid.Row="0" Grid.ColumnSpan="4"  Margin="2,5" TextWrapping="Wrap" Text="TextBox" />
+        <TextBox x:Name="textBox" Grid.Row="0" Grid.ColumnSpan="4"  Margin="2,5" TextWrapping="Wrap" Text="" />
         <Button Content="7" HorizontalAlignment="Left" Grid.Row="1" 
-                VerticalAlignment="Top" Width="198" Height="70" />
+                VerticalAlignment="Top" Width="198" Height="70" Click="NumButton_Click" />
         <Button Content="8" HorizontalAlignment="Left" Grid.Row="1" 
-                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="1" />
+                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="1" Click="NumButton_Click" />
         <Button Content="9" HorizontalAlignment="Left" Grid.Row="1" 
-                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="2"/>
+                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="2" Click="NumButton_Click"/>
         <Button Content="+" HorizontalAlignment="Left" Grid.Row="1" 
                 VerticalAlignment="Top" Width="198" Height="70" Grid.Column="3" />
 
         <Button Content="4" HorizontalAlignment="Left" Grid.Row="2" 
-                VerticalAlignment="Top" Width="198" Height="70" />
+                VerticalAlignment="Top" Width="198" Height="70" Click="NumButton_Click" />
         <Button Content="5" HorizontalAlignment="Left" Grid.Row="2" 
-                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="1" />
+                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="1" Click="NumButton_Click" />
         <Button Content="6" HorizontalAlignment="Left" Grid.Row="2" 
-                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="2"/>
+                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="2" Click="NumButton_Click"/>
         <Button Content="-" HorizontalAlignment="Left" Grid.Row="2" 
                 VerticalAlignment="Top" Width="198" Height="70" Grid.Column="3" />
 
         <Button Content="3" HorizontalAlignment="Left" Grid.Row="3" 
-                VerticalAlignment="Top" Width="198" Height="70" />
+                VerticalAlignment="Top" Width="198" Height="70" Click="NumButton_Click" />
         <Button Content="2" HorizontalAlignment="Left" Grid.Row="3" 
-                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="1" />
+                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="1" Click="NumButton_Click" />
         <Button Content="1" HorizontalAlignment="Left" Grid.Row="3" 
-                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="2"/>
+                VerticalAlignment="Top" Width="198" Height="70" Grid.Column="2" Click="NumButton_Click"/>
         <Button Content="*" HorizontalAlignment="Left" Grid.Row="3" 
                 VerticalAlignment="Top" Width="198" Height="70" Grid.Column="3" />
 
