--- a/WpfTutorial/MainWindow.xaml
+++ b/WpfTutorial/MainWindow.xaml
@@ -30,7 +30,10 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="textBox" Grid.Row="0" Grid.ColumnSpan="4"  Margin="2,5" TextWrapping="Wrap" Text="" />
+
+        <TextBox x:Name="textBox" Grid.Row="0" Grid.ColumnSpan="4"  Margin="2,5" KeyDown="TextBox_KeyDown" TextWrapping="Wrap" Text="" />
+
+
         <Button Content="7" HorizontalAlignment="Left" Grid.Row="1" 
                 VerticalAlignment="Top" Width="198" Height="70" Click="NumButton_Click" />
         <Button Content="8" HorizontalAlignment="Left" Grid.Row="1" 
@@ -57,6 +60,12 @@
                 VerticalAlignment="Top" Width="198" Height="70" Grid.Column="2" Click="NumButton_Click"/>
         <Button Content="*" HorizontalAlignment="Left" Grid.Row="3" 
                 VerticalAlignment="Top" Width="198" Height="70" Grid.Column="3" />
+        <Button Content="Compute" HorizontalAlignment="Left" Grid.Row="4" 
+            VerticalAlignment="Top" Width="396" Height="70" Grid.ColumnSpan="3" Margin="2,0,0,0" />
+        <Button Content="/" HorizontalAlignment="Left" 
+            VerticalAlignment="Top" Width="198" Height="70" Grid.Column="3" Grid.Row="4" />
+        <Button Content="Clear" HorizontalAlignment="Left" Grid.Row="4" Click="Button_Click"
+            VerticalAlignment="Top" Width="200" Height="70" Grid.ColumnSpan="2" Grid.Column="2" />
 
     </Grid>
 </Window>
